5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1708_3038.log
== TEST (2019-04-29 15:29:58) 
-- CODE:
x = input()

if x = 0
	resposta = 0
	
else
	if x < 1 and x >-1
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- ERROR:
File "XXXX", line 3
    if x = 0
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:30:17) 
-- CODE:
x = input()

if (x = 0):
	resposta = 0
	
else
	if x < 1 and x >-1
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- ERROR:
File "XXXX", line 3
    if (x = 0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:30:31) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else
	if x < 1 and x >-1
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- ERROR:
File "XXXX", line 6
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:30:32) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else
	if x < 1 and x >-1
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- ERROR:
File "XXXX", line 6
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:30:40) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else()
	if x < 1 and x >-1
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- ERROR:
File "XXXX", line 6
    else()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:30:47) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else():
	if x < 1 and x >-1
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- ERROR:
File "XXXX", line 6
    else():
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:31:10) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else
	if (x < 1 and x >-1)
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- ERROR:
File "XXXX", line 6
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:31:26) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
	else
	if (x < 1 and x >-1)
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- ERROR:
File "XXXX", line 6
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:31:31) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else
	if (x < 1 and x >-1)
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- EXECUTION TIME:
0.224637
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 6
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:31:32) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else
	if (x < 1 and x >-1)
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- EXECUTION TIME:
0.21642
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 6
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:31:32) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else
	if (x < 1 and x >-1)
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- EXECUTION TIME:
0.256006
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 6
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:31:32) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else
	if (x < 1 and x >-1)
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- EXECUTION TIME:
0.30226
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 6
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:31:32) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else
	if (x < 1 and x >-1)
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- EXECUTION TIME:
0.329724
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 6
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:31:32) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else
	if (x < 1 and x >-1)
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- EXECUTION TIME:
0.652269
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 6
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:31:32) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else
	if (x < 1 and x >-1)
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- EXECUTION TIME:
0.706442
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 6
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:31:34) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else
	if (x < 1 and x >-1)
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- EXECUTION TIME:
0.243373
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 6
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:31:34) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else
	if (x < 1 and x >-1)
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- EXECUTION TIME:
0.512937
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 6
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:31:34) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else
	if (x < 1 and x >-1)
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- EXECUTION TIME:
0.639797
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 6
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:31:34) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else
	if (x < 1 and x >-1)
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- EXECUTION TIME:
0.637249
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 6
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:31:34) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else
	if (x < 1 and x >-1)
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- EXECUTION TIME:
0.634614
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 6
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:31:34) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else
	if (x < 1 and x >-1)
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- EXECUTION TIME:
0.72382
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 6
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:31:34) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else
	if (x < 1 and x >-1)
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- EXECUTION TIME:
0.264533
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 6
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:31:57) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1)
		resposta = abs(x)
		
	else
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- ERROR:
File "XXXX", line 7
    if (x < 1 and x >-1)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:32:09) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
else:
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:32:17) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:32:30) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:33:05) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:33:23) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- EXECUTION TIME:
0.22913
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
0
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
0
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:33:34) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- EXECUTION TIME:
0.203798
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
0
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
0
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:33:36) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:33:54) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:05) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:19) 
-- CODE:
x = input()

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:34) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:34) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:34) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:35) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:34:37) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- EXECUTION TIME:
0.154009
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
0
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
0
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:34:37) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- EXECUTION TIME:
0.146807
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
0
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
0
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:38) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:38) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:38) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:38) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:34:38) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- EXECUTION TIME:
0.24525
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
0
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
0
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:34:38) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- EXECUTION TIME:
0.213249
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
0
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
0
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:38) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:38) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:38) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:38) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:39) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:39) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:39) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:39) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:39) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:39) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:39) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:39) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:39) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:39) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:39) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:35:11) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:35:15) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- EXECUTION TIME:
0.201349
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 10
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:35:18) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
	else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:35:25) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:35:30) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- EXECUTION TIME:
0.170346
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
0
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
0
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:35:39) 
-- CODE:
x = input

if ( "x = 0" ):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:35:41) 
-- CODE:
x = input

if ( "x = 0" ):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- EXECUTION TIME:
0.22191
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
0
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
0
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:35:52) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 or x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:35:53) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 or x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- EXECUTION TIME:
0.11614
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
0
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
0
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:35:54) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 or x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- EXECUTION TIME:
0.114647
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
0
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
0
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:36:03) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- EXECUTION TIME:
0.219661
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
0
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
0
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:36:04) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:36:13) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:37:44) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:37:58) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:38:03) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:38:09) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:38:20) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- EXECUTION TIME:
0.153431
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
0
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
0
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:39:38) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
printf("%.2f"%/resposta)
-- ERROR:
File "XXXX", line 13
    printf("%.2f"%/resposta)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:39:39) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
printf("%.2f"%/resposta)
-- EXECUTION TIME:
0.138874
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 13
    printf("%.2f"%/resposta)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:39:40) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
printf("%.2f"%/resposta)
-- ERROR:
File "XXXX", line 13
    printf("%.2f"%/resposta)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:39:48) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:39:50) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- EXECUTION TIME:
0.12025
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:39:50) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print("%.2f"%/resposta)
-- ERROR:
File "XXXX", line 13
    print("%.2f"%/resposta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:39:56) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print("%2f"%/resposta)
-- ERROR:
File "XXXX", line 13
    print("%2f"%/resposta)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:40:10) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- EXECUTION TIME:
0.207083
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
0
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
0
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:40:24) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
	resposta = abs(x)
		
	else:
	resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 8
    resposta = abs(x)
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:40:24) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
	resposta = abs(x)
		
	else:
	resposta = sqrt(abs(x))
		
print(resposta)
-- EXECUTION TIME:
0.155695
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 8
    resposta = abs(x)
           ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:40:25) 
-- CODE:
x = input

if ("x = 0"):
	resposta = 0
	
else:
	if (x < 1 and x >-1):
	resposta = abs(x)
		
	else:
	resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 8
    resposta = abs(x)
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:40:53) 
-- CODE:
x = input

if ("x = 0"):
	(resposta = 0)
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- ERROR:
File "XXXX", line 4
    (resposta = 0)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:40:55) 
-- CODE:
x = input

if ("x = 0"):
	(resposta = 0)
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- EXECUTION TIME:
0.204239
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 4
    (resposta = 0)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:40:55) 
-- CODE:
x = input

if ("x = 0"):
	(resposta = 0)
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- ERROR:
File "XXXX", line 4
    (resposta = 0)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:41:06) 
-- CODE:
x = input

if ("x = 0"):
	(resposta = "0")
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- ERROR:
File "XXXX", line 4
    (resposta = "0")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:41:07) 
-- CODE:
x = input

if ("x = 0"):
	(resposta = "0")
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- EXECUTION TIME:
0.114182
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 4
    (resposta = "0")
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:41:12) 
-- CODE:
x = input

if ("x = 0"):
	( resposta = "0" )
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- ERROR:
File "XXXX", line 4
    ( resposta = "0" )
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:41:12) 
-- CODE:
x = input

if ("x = 0"):
	( resposta = "0" )
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- ERROR:
File "XXXX", line 4
    ( resposta = "0" )
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:41:12) 
-- CODE:
x = input

if ("x = 0"):
	( resposta = "0" )
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- EXECUTION TIME:
0.145855
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 4
    ( resposta = "0" )
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:41:12) 
-- CODE:
x = input

if ("x = 0"):
	( resposta = "0" )
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- ERROR:
File "XXXX", line 4
    ( resposta = "0" )
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:41:13) 
-- CODE:
x = input

if ("x = 0"):
	( resposta = "0" )
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- ERROR:
File "XXXX", line 4
    ( resposta = "0" )
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:41:13) 
-- CODE:
x = input

if ("x = 0"):
	( resposta = "0" )
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- ERROR:
File "XXXX", line 4
    ( resposta = "0" )
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:41:13) 
-- CODE:
x = input

if ("x = 0"):
	( resposta = "0" )
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- EXECUTION TIME:
0.164448
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 4
    ( resposta = "0" )
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:41:13) 
-- CODE:
x = input

if ("x = 0"):
	( resposta = "0" )
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- EXECUTION TIME:
0.111008
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 4
    ( resposta = "0" )
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:41:13) 
-- CODE:
x = input

if ("x = 0"):
	( resposta = "0" )
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- ERROR:
File "XXXX", line 4
    ( resposta = "0" )
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:41:14) 
-- CODE:
x = input

if ("x = 0"):
	( resposta = "0" )
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- ERROR:
File "XXXX", line 4
    ( resposta = "0" )
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:41:14) 
-- CODE:
x = input

if ("x = 0"):
	( resposta = "0" )
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- EXECUTION TIME:
0.148277
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1708/3038/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:41:14) 
-- CODE:
x = input

if ("x = 0"):
	( resposta = "0" )
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- ERROR:
File "XXXX", line 4
    ( resposta = "0" )
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:41:14) 
-- CODE:
x = input

if ("x = 0"):
	( resposta = "0" )
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- EXECUTION TIME:
0.276264
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 4
    ( resposta = "0" )
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:41:14) 
-- CODE:
x = input

if ("x = 0"):
	( resposta = "0" )
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- EXECUTION TIME:
0.219892
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1708/3038/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:41:14) 
-- CODE:
x = input

if ("x = 0"):
	( resposta = "0" )
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- ERROR:
File "XXXX", line 4
    ( resposta = "0" )
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:41:15) 
-- CODE:
x = input

if ("x = 0"):
	( resposta = "0" )
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- EXECUTION TIME:
0.242001
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 4
    ( resposta = "0" )
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:41:15) 
-- CODE:
x = input

if ("x = 0"):
	( resposta = "0" )
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- EXECUTION TIME:
0.180833
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 4
    ( resposta = "0" )
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:41:15) 
-- CODE:
x = input

if ("x = 0"):
	( resposta = "0" )
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		(resposta = sqrt(abs(x)))
		
print(resposta)
-- EXECUTION TIME:
0.234365
-- ERROR:
  File "/home/codebench/codes/1708/3038/main.py", line 4
    ( resposta = "0" )
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:19) 
-- CODE:
x = input

if ("x = 0"):
	( resposta = 0 )
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 4
    ( resposta = 0 )
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:35) 
-- CODE:
x = input

if ("x = 0"):
	 resposta = 0 
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 4
    ( resposta = 0 )
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:43:03) 
-- CODE:
x = input(float)

if ("x = 0"):
	resposta = 0 
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- OUTPUT:
<class 'float'>0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:43:15) 
-- CODE:
x = input(float)

if ("x = 0"):
	resposta = 0 
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- EXECUTION TIME:
0.198756
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
<class 'float'>0
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
<class 'float'>0
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
<class 'float'>0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:43:19) 
-- CODE:
x = input(float)

if ("x = 0"):
	resposta = 0 
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- OUTPUT:
<class 'float'>0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:43:48) 
-- CODE:
x = input(float("fx: ")

if ("x = 0"):
	resposta = 0 
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 3
    if ("x = 0"):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:44:01) 
-- CODE:
x = input(float("fx: ")

if (x = 0):
	resposta = 0 
	
else:
	if (x < 1 and x >-1):
		resposta = abs(x)
		
	else:
		resposta = sqrt(abs(x))
		
print(resposta)
-- ERROR:
File "XXXX", line 3
    if (x = 0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
